--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -53,27 +53,29 @@
     color: var(--gray-700);
   }
 
-  main {
+main {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh; 
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 1rem;
+    align-items: flex-start;
+    padding-top: 0;
     box-sizing: inherit;
     position: relative;
-  }
+}
 
-  .content {
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 20px;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 3rem;
-  }
+    width: 100vw;
+    height: 100vh; 
+    background-color: #f5f5f5;
+    padding: 0;
+    margin: 0;
+}
 
   .container-input {
     display: flex;
@@ -97,15 +99,28 @@
   }
 </style>
 
+
 <main class="main">
   <div class="content">
+    <div class="header">
+      <h1>Desafio FPF</h1>
+    </div>
     <div class="container-input">
+    <div class="input-group">
+      <label for="num1">NÚMERO 1</label>
       <input type="text" value="0" [(ngModel)]="num1" id="num1" name="num1" autofocus />
+    </div>
+    <div class="input-group">
+      <label for="num2">NÚMERO 2</label>
       <input type="text" value="0" [(ngModel)]="num2" id="num2" name="num2" />
+    </div>
+    <div class="input-group">
+      <label for="num3">NÚMERO 3</label>
       <input type="text" value="0" [(ngModel)]="num3" id="num3" name="num3" />
     </div>
+  </div>
     <div class="container-submit">
-      <input class="btn-confirm" type="submit" value="Calcular" id="counter" (click)="createProcessamento()" />
+      <input class="btn-confirm" type="submit" value="CALCULAR" id="counter" (click)="createProcessamento()" />
     </div>
     <div class="container-table">
       <table *ngIf="data.length > 0" [border]="1">
